--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="jumbotron">
-	<h1>WELCOME FOLKS</h1>
+<div class="jumbotron" style="font-family: 'Rowdies', cursive;">
+	<h1>Welcome Folks,</h1>
 </div>
 
 {% endblock %}
