--- a/templates/list.html
+++ b/templates/list.html
@@ -1,9 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="jumbotron">
-	<h1 class="display-4">List of all the Employees</h1>
+	<h1 style="font-family: 'Rowdies', cursive;">List of all the Employees</h1>
 	{% for em in emp %}
-	<br>
 	<br>
 	<table >
 		<thead>
