--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,8 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Project</title>
+    <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@300&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Rowdies:wght@700&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css2?family=Viga&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
@@ -13,7 +15,7 @@
 <body style="background-color:grey;">
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark" >
         <h2 style="color:#FFFFFF;font-family: 'Viga', sans-serif;">DB Connect</h2>
-        <ul class="navbar-nav mr-auto align-right"  style="margin-left:850px;font-family: 'Viga', sans-serif;">
+        <ul class="navbar-nav mr-auto align-right"  style="margin-left:840px;font-family: 'Viga', sans-serif;">
             
             <li class="nav-item active">
               <a class="nav-link btn btn-outline-primary" href="{{url_for('home')}}">Home </a>             
