--- a/templates/base.html
+++ b/templates/base.html
@@ -15,8 +15,7 @@
 <body style="background-color:grey;">
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark" >
         <h2 style="color:#FFFFFF;font-family: 'Viga', sans-serif;">DB Connect</h2>
-        <ul class="navbar-nav mr-auto align-right"  style="margin-left:840px;font-family: 'Viga', sans-serif;">
-            
+        <ul class="navbar-nav mr-auto align-right"  style="margin-left:760px;font-family: 'Viga', sans-serif;">
             <li class="nav-item active">
               <a class="nav-link btn btn-outline-primary" href="{{url_for('home')}}">Home </a>             
             </li>
@@ -30,7 +29,12 @@
             </li>
             &emsp;
             <li class="nav-item active">
-              <a class="nav-link btn btn-outline-primary" href="{{url_for('delete')}}">Delete </a>             
+              <a class="nav-link btn btn-outline-primary" href="{{url_for('search',no=0)}}">Update </a>
+            </li>
+            
+            &emsp;
+            <li class="nav-item active">
+              <a class="nav-link btn btn-outline-primary" href="{{url_for('search',no=1)}}">Delete </a>             
             </li>
         </ul>
     </nav>
