--- a/templates/employee/modifyEmployee.html
+++ b/templates/employee/modifyEmployee.html
@@ -20,7 +20,7 @@
 				<td ><h5>{{form.employee_hacker_rank_id(value=rec.employee_hacker_rank_id)}}</h5></td>
 			</tr>
 			<tr>
-				<td colspan="2" style="padding-left:235px;"><br>{{form.submit()}}</td>
+				<td colspan="2" style="padding-left:235px;"><br>{{form.submit1()}}</td>
 
 			</tr>
 
