--- a/templates/score/listScoreboard.html
+++ b/templates/score/listScoreboard.html
@@ -28,7 +28,7 @@
 			{% endfor %}
 		</tbody>
 	</table><br>
-    <a  href="{{url_for('download_table')}}" style="font-family: Helvetica, Arial, sans-serif;">Download</a>
+    <a  href="{{url_for('download_table',item='scoreboard')}}" style="font-family: Helvetica, Arial, sans-serif;">Download</a>
 
 
 </div>
