--- a/templates/signup.html
+++ b/templates/signup.html
@@ -11,9 +11,24 @@
 	{{form.hidden_tag()}}
 	<table>
 		<tr>
-			<th colspan="2" style="padding:20px 0px 0px 0px;text-align:center;width:500px;height:20px;font-family: 'FF Mark W05', sans-serif;font-size:30px">Register</th>
+			<th colspan="2" style="padding:20px 0px 0px 0px;text-align:center;width:500px;height:20px;font-family: 'FF Mark W05', sans-serif;font-size:30px">Sign Up</th>
 		</tr>
 		<tr><td colspan="2"><hr class="my-4"></td></tr>
+		<tr>
+		<td style="text-align:center;padding:0px 0px 10px 0px;">{{form.employee_id.label}}</td>
+		<td  style="padding:0px 40px 10px 0px;width:250px">{{form.employee_id(class="form-control")}}</td>
+		</tr>
+		{% if form.employee_id.errors %}
+			{% for error in form.employee_id.errors %}
+		<tr>
+				<td colspan="2"><div class="alert alert-danger alert-dismissible" role="alert">
+						<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+							<span aria-hidden="true">&times;</span>
+						</button>
+				 		{{error}}
+			 </div></td></tr>
+			{% endfor %}
+		{% endif %}
 		<tr>
 		<td style="text-align:center;padding:0px 0px 10px 0px;">{{form.email.label}}</td>
 		<td  style="padding:0px 40px 10px 0px;width:250px">{{form.email(class="form-control")}}</td>
